--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "social-media",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./httpd/server.js",
+    "dev": "nodemon ./httpd/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +14,14 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "express-session": "^1.17.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
+    "mongoose-unique-validator": "^2.0.3",
     "redis": "^3.0.2"
   },
   "devDependencies": {
