feat: add jwt authentication

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 NODE_ENV=development
 
 PORT=5005
-MONGODB_URI=mongodb://localhost:27017/feedr
-SECRET_KEY=YOUR_SECRET_KEY
+MONGODB_URI=mongodb://localhost:27017
+MONGODB_NAME=feedr
+
+JWT_SECRET_KEY=Your_Secret_Key
+
+REDIS_URL=redis://localhost:6379
+REDIS_SECRET_KEY=Your_Secret_Key
