--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "redis": "^3.0.2"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
     "morgan": "^1.10.0"
   }
 }
