--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.1",
-    "morgan": "^1.10.0"
+    "eslint-plugin-prettier": "^3.1.2",
+    "morgan": "^1.10.0",
+    "prettier": "^2.0.2"
   }
 }
