--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "npx eslint .",
+    "lint": "./node_modules/.bin/eslint .",
     "lint:fix": "npm run lint -- --fix",
-    "start": "node ./httpd/server.js",
-    "dev": "nodemon ./httpd/server.js"
+    "start": "node ./server.js",
+    "start:dev": "clear && nodemon ./server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "connect-redis": "^4.0.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
