--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "./node_modules/.bin/eslint .",
     "lint:fix": "npm run lint -- --fix",
     "start": "node ./server.js",
-    "start:dev": "clear && nodemon ./server.js"
+    "start:dev": "clear && nodemon ./server.js",
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "keywords": [],
   "author": "",
@@ -35,6 +36,7 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "mocha": "^7.1.1",
     "prettier": "^2.0.2"
   }
 }
