--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "chalk": "^4.0.0",
     "compression": "^1.7.4",
     "connect-redis": "^4.0.4",
     "cors": "^2.8.5",
