--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@ NODE_ENV=development
 
 PORT=5005
 MONGODB_URI=mongodb://localhost:27017
-MONGODB_NAME=feedr
+MONGODB_NAME=magenta
 REDIS_URL=redis://localhost:6379
 
-JWT_SECRET_KEY=Your_Secret_Key
-SESSION_SECRET_KEY=Your_Secret_Key
+ACCESS_TOKEN_KEY=secret
+REFRESH_TOKEN_KEY=secret
+SESSION_SECRET_KEY=secret
