refactor(env): change redis var

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 PORT=5005
 
-MONGODB_URI=mongodb://localhost:27017
 MONGODB_NAME=magenta
-REDIS_URL=redis://localhost:6379
+MONGODB_URI=mongodb://localhost:27017
+
+REDISCLOUD_URL=redis://localhost:6379
 
 ACCESS_TOKEN_KEY=secret
 REFRESH_TOKEN_KEY=secret
